compile-direct/tests/failing/1-int_op_float_literal/main.af
int: @int

main: () {
    @add(1.5, 2, (res: int){
        @exit(0)
    })
}
